projects/blueJProjects/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/usr/lib/jvm/java-11-openjdk-amd64/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
/usr/share/bluej/bluejcore.jar:/usr/share/bluej/junit-4.11.jar:/usr/share/bluej/hamcrest-core-1.3.jar:/usr/share/bluej/lang-stride.jar:/usr/share/java/javafx-base-11.jar:/usr/share/java/javafx-controls-11.jar:/usr/share/java/javafx-fxml-11.jar:/usr/share/java/javafx-graphics-11.jar:/usr/share/java/javafx-media-11.jar:/usr/share/java/javafx-properties-11.jar:/usr/share/java/javafx-swing-11.jar:/usr/share/java/javafx-web-11.jar:/home/rangelrey/gitrepos/programming-algorithms-and-data-structures/projects/blueJProjects
-d
/home/rangelrey/gitrepos/programming-algorithms-and-data-structures/projects/blueJProjects/doc
-encoding
UTF-8
-charset
UTF-8
/home/rangelrey/gitrepos/programming-algorithms-and-data-structures/projects/blueJProjects/ListNode.java
<---- end of javadoc command ---->
Loading source file /home/rangelrey/gitrepos/programming-algorithms-and-data-structures/projects/blueJProjects/ListNode.java...
/home/rangelrey/gitrepos/programming-algorithms-and-data-structures/projects/blueJProjects/ListNode.java:28: error: class, interface, or enum expected
    public String toString () {
           ^
/home/rangelrey/gitrepos/programming-algorithms-and-data-structures/projects/blueJProjects/ListNode.java:30: error: class, interface, or enum expected
        result = result + "[";
        ^
/home/rangelrey/gitrepos/programming-algorithms-and-data-structures/projects/blueJProjects/ListNode.java:31: error: class, interface, or enum expected
        ListNode current = this;
        ^
/home/rangelrey/gitrepos/programming-algorithms-and-data-structures/projects/blueJProjects/ListNode.java:32: error: class, interface, or enum expected
        while (current != null) {
        ^
/home/rangelrey/gitrepos/programming-algorithms-and-data-structures/projects/blueJProjects/ListNode.java:35: error: class, interface, or enum expected
        }
        ^
/home/rangelrey/gitrepos/programming-algorithms-and-data-structures/projects/blueJProjects/ListNode.java:38: error: class, interface, or enum expected
        return result;
        ^
/home/rangelrey/gitrepos/programming-algorithms-and-data-structures/projects/blueJProjects/ListNode.java:39: error: class, interface, or enum expected
    }
    ^
7 errors
